Add bolding, update short text guide, add formatting page

--- a/pages/home.html
+++ b/pages/home.html
@@ -27,7 +27,7 @@
     <input class="btn btn-primary" type="submit" value="View A Random Post">
 </form>
 <h2>Create a Forum Post</h2>
-<p>(Plaintext only, 5000 character limit) Note: newlines are banned. There is no such thing as a newline.</p>
+<p>(Plaintext only, 3000 character limit.)</p> <a href="/formatting">Click here for full formatting info.</a>
 <form method="POST" action = "/make_forum_post">
     <div class = "form-group">
         <textarea type="text" name = "thing" id="mke"></textarea>
