Implement hCaptcha verification?

--- a/pages/home.html
+++ b/pages/home.html
@@ -32,6 +32,7 @@
     <div class = "form-group">
         <textarea type="text" name = "thing" id="mke"></textarea>
     </div>
+    {{ hcaptcha }}
     <input class="btn btn-primary" type="submit" value="Post Forum Thing">
 </form>
 </body>
