--- a/pages/mods.html
+++ b/pages/mods.html
@@ -1,5 +1,5 @@
 <h1>Moderation Utilities</h1>
-<p>ReallyBadForums moment</p>
+<p>ID to delete</p>
 <form method="POST" action = "/moderation/mod-del">
     <div class = "form-group">
         <input type="text" name="id-del"</input>
