--- a/pages/home.html
+++ b/pages/home.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <head>
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/i/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/i/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/i/favicon-16x16.png">
+    <link rel="manifest" href="/i/site.webmanifest">
+    <link rel="mask-icon" href="/i/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 <h1>So... Python is cool.</h1>
 <h2>Especially with Flask.</h2>
 <h3>but what if... it wasn't?</h3>
 <p>Introducing: Super Bad Forums</p>
-<p>There are no accounts. There isn't any security, or organization (unless you make a forum post of that,) or anything. Just create a post and share the ID with people you want to see it. That's it.</p>
+<p>There are no accounts*. There isn't any security, or organization (unless you make a forum post of that,) or anything. Just create a post and share the ID with people you want to see it. That's it.</p>
 <h2>View A Form Post</h2>
 <form method="POST" action = "/view_post">
     <div class = "form-group">
@@ -31,4 +38,5 @@
     <div class="h-captcha" data-sitekey="26cad5fd-f6d0-45a4-8d3b-09425d888045"></div>
     <input class="btn btn-primary" type="submit" value="Post Forum Thing">
 </form>
+<p>*Accounts may be a thing later, but idk for sure</p>
 </body>
