fix #10, #5 is dumb but work is happening

--- a/pages/mods.html
+++ b/pages/mods.html
@@ -1,8 +1,10 @@
 <h1>Moderation Utilities</h1>
-<p>ID to delete</p>
 <form method="POST" action = "/moderation/mod-del">
     <div class = "form-group">
+        <p>ID to delete</p>
         <input type="text" name="id-del"</input>
+        <p>Password</p>
+        <input type="text" name="pswd"</input>
     </div>
     <input class="btn btn-primary" type="submit" value="Delete">
 </form>
