--- a/pages/mods.html
+++ b/pages/mods.html
@@ -2,9 +2,9 @@
 <form method="POST" action = "/moderation/mod-del">
     <div class = "form-group">
         <p>ID to delete</p>
-        <input type="text" name="id-del"</input>
+        <input type="text" name="delID"</input>
         <p>Password</p>
-        <input type="text" name="pswd"</input>
+        <input type="password" name="pswd"</input>
     </div>
     <input class="btn btn-primary" type="submit" value="Delete">
 </form>
