--- a/pages/setCookie.html
+++ b/pages/setCookie.html
@@ -4,7 +4,7 @@
         <p>Cookie Name<p>
         <input type="text" name="cookieName"</input>
         <p>Cookie Content</p>
-        <input type="text" name="cookieContent"</input>
+        <input type="password" name="cookieContent"</input>
     </div>
     <input class="btn btn-primary" type="submit" value="Set Cookie">
 </form>
