--- a/pages/home.html
+++ b/pages/home.html
@@ -15,11 +15,8 @@
     </div>
     <input class="btn btn-primary" type="submit" value="View A Post">
 </form>
-<p>Put random characters in the next text box for the seed of the randomness, and you will be directed to a random post. (Leave blank for auto-generated seed)</p>
+<p>Want inspiration? View a random post today!</p>
 <form method="POST" action = "/view_rand_post">
-    <div class = "form-group">
-        <input type="text" name = "seed"</input>
-    </div>
     <input class="btn btn-primary" type="submit" value="View A Random Post">
 </form>
 <h2>Create a Forum Post</h2>
