Work on #17, found issues with set_cookie

--- a/pages/mods.html
+++ b/pages/mods.html
@@ -1,4 +1,11 @@
 <h1>Moderation Utilities</h1>
+<p>Last 5 Posts:
+    Replace1
+    Replace2
+    Replace3
+    Replace4
+    Replace5
+</p>
 <form method="POST" action = "/moderation/mod-del">
     <div class = "form-group">
         <p>ID to delete</p>
